# api.yaml
@@ -407,11 +407,11 @@ paths:
           $ref: '#/definitions/Volume4D'
         in: body
         required: true
-      - name: callbacks
+      - name: callback
         description: Endpoints that should be called when an applicable event occurs.  At
           least one field must be specified.
         schema:
-          $ref: '#/definitions/SubscriptionCallbacks'
+          $ref: '#/definitions/SubscriptionCallback'
         in: body
         required: true
       - name: version
@@ -884,8 +884,8 @@ definitions:
       id:
         $ref: '#/definitions/UUIDv4'
         description: Unique identifier for this subscription.
-      callbacks:
-        $ref: '#/definitions/SubscriptionCallbacks'
+      callback:
+        $ref: '#/definitions/SubscriptionCallback'
       owner:
         description: Assigned by the DSS based on creating client’s ID (via access
           token).  Used for restricting mutation and deletion operations to owner.
@@ -904,18 +904,10 @@ definitions:
       version:
         description: A versioning string which can be used for read-modify-write operations to maintain idempotency.
         type: string
-  SubscriptionCallbacks:
+  SubscriptionCallback:
     description: Endpoints that should be called when an applicable event occurs.  At
       least one field must be specified.
-    type: object
-    properties:
-      identification_service_area_url:
-        $ref: '#/definitions/URL'
-        description: If specified, other clients will be instructed by the DSS to
-          call this endpoint when an Identification Service Area relevant to this
-          Subscription is created, modified, or deleted.  Must implement PUT and
-          DELETE according to the `/uss/identification_service_areas/{id}` path
-          API.
+    type: string
   PatchSubscriptionResponse:
     description: Response for a request to update a subscription.
     required:
@@ -932,6 +924,7 @@ definitions:
       subscription:
         $ref: '#/definitions/Subscription'
         description: Result of the operation on the subscription.
+    type: string
   PutSubscriptionResponse:
     description: Response for a request to create a subscription.
     required:
